Lilac: Cleaning up some lint.